--- a/site/src/posts/260218.md
+++ b/site/src/posts/260218.md
@@ -5,7 +5,8 @@ image: ""
 audio: ""
 ---
 
-enveloped in stagnant skin 
-beneath the pulse of crawling flesh 
-i stare into my own exasperation my poisoned vice
+enveloped in stagnant skin
+beneath the pulse of crawling flesh
+i stare into my own exasperation
+my poisoned vice
 an echoed mess
